--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-template-nuxt-2",
+  "name": "@artmizu/sitemap-nuxt-2",
   "type": "module",
   "version": "1.0.0",
   "private": true,
@@ -27,12 +27,20 @@
     "playground": "nodemon --exec 'nuxt ./playground' --watch ./dist -e js,ts",
     "playground:build": "nuxt build ./playground",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "lint": "eslint --ext .ts,.js,.vue .",
     "typecheck": "pnpm tsc",
     "prepare": "husky install"
   },
   "peerDependencies": {
     "@nuxt/types": "^2.15.8"
+  },
+  "dependencies": {
+    "consola": "^2.15.3",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
+    "minimatch": "^5.1.0",
+    "sitemap": "^7.1.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.31.0",
@@ -44,6 +52,9 @@
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@types/jest": "^26.0.24",
+    "@types/lodash.clonedeep": "^4.5.7",
+    "@types/lodash.merge": "^4.6.7",
+    "@types/minimatch": "^5.1.2",
     "@types/node": "^18.11.9",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
@@ -54,6 +65,7 @@
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
+    "fast-xml-parser": "^4.0.12",
     "husky": "^8.0.2",
     "jest": "26.6.3",
     "jest-environment-jsdom": "^26.6.2",
