--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "sourceMap": true,
     "strict": true,
     "noEmit": true,
+    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
