--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "typecheck": "pnpm tsc",
     "prepare": "husky install"
   },
+  "peerDependencies": {
+    "@nuxt/types": "^2.15.8"
+  },
   "dependencies": {
     "consola": "^2.15.3",
     "lodash.clonedeep": "^4.5.0",
