--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "minimatch": "^5.1.0",
-    "sitemap": "^7.1.1"
+    "sitemap": "^7.1.1",
+    "type-fest": "^3.2.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.31.0",
